testing more memory and ZGC begin support for running complex calculations outside of drawing loop frameRate listener to support throttling KeyCallback binding mechanism Change to the drawer for performance throttling on setStep and nextGeneration